--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/flaskicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jiale Zhu - Chemistry</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jiale Zhu</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jialezhu.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +58,19 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jiale Zhu
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Chemistry</div>
+        <p class="lead mb-4">My Bachelor's Degree in Chemistry has afforded me experience in working with many different instrumentations
+        and allowed me to use my knowledge to real world applications. Within the first few years at my time at the University of Califonia, Riverside,
+        I have developed a great interest in the research of semiconductors, as it benefits my personal goal of working with solar cell technology.<br><br>
 
-        Enter bio here<br><br>
+        Towards the end of my junior year spent at the University of California, Riverside, I joined a research lab and begun to work on synthesizing transition 
+        metal dichalcogenides, partically one called Molybdenum Disulfide. We probe these semiconductors for their characteristic and unique electronic and sprintronic properties
+        By synthesizing these materials as a monolayer film product on a solid substrate, we can maximize the benefit obtained from the properties borne from the synthesis process.<br><br>
 
-        Enter bio here
+        Currently I am looking for an opportunity to further study and develop my knowledge and research in the semiconductor/solar technology field. A job within this field would
+        be an option that I am completely open to. I am also exploring potential graduate school options as a secondary pathway.
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
@@ -92,48 +97,54 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Undergraduate Researcher</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Ludwig Bartels Research Group</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Synthesized dichalcogenides on solid SiO2 substrate wafers in an inert environment.<br> 
+              • Prepared silicon dioxide (SiO2) substrates necessary for the synthesis of MoS2 through piranha etch solution. 
+              • Ensured proper sample growth through control and monitoring of various parameters such as temperature, rate of temperature change, gas flow rate and amount of precursors used.
+              • Analyzed synthesized samples for their optical properties using Photoluminescence.<br>
+              • Gave weekly presentations on current research progress and further improvements to experimental process and parameters.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Tour Guide</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">San Francisco Public Utilities Commission</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Facilitated building tours as well as informed participants of the history of the building.<br>
+              • Directed PowerPoint presentations about the importance of water conservation and the ways in which water usage could be reduced.
+              • Addressed gaps in protocol by improvising with team members on the spot.
+              • Provided poster presentations emphasizing water conservation in public city event.
+            <br>
+            
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2015 - July 2015</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Newspaper and Yearbook Editor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Galileo Academy of Science and Technology</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Interviewed school staff and faculty and also wrote articles about their experiences at school.<br>
+            • Captured photos of classes in session and compiled them into the school yearbook.<br>
+            • Wrote newspaper articles about school events and published them in our school newspaper.<br>
+            <br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2015 - May 2016</span>
           </div>
         </div>
 
@@ -152,36 +163,24 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Science in Chemistry</div>
+            <div>BS in Chemistry</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2016 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <h3 class="mb-0">Galileo Academy of Science and Technology</h3>
+            <div class="subheading mb-3">High School Graduate</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">May 2016</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +190,14 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/blue.PNG" width="800px"> 
+            <img src="img/star.PNG" width="800px">
+            <br>
+        </center>
+        <center>
+            <img src="img/PL.PNG" width="800px"> 
+            <img src="img/raman.PNG" width="800px">
+            <br>
         </center>
       </div>
     </section>
@@ -199,7 +205,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jiale Zhu</center><br>
 
 
   </div>
